# seele

./: .gitignore  .gitmodules  ;  AGENTS.md  Cargo.toml  README.md  flake.nix  limine.conf  maplemono.psf  runner.rs  rust-toolchain.toml  todo-list.md
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  linker-x86_64.ld
kernel/.cargo/: config.toml
kernel/src/: boot.rs  exception_interrupt.rs  gdt.rs  graphics.rs  hardware_interrupt.rs  interrupts.rs  lib.rs  main.rs  misc.rs  object.rs  os.rs  panic_handler.rs  testing.rs  tss.rs
kernel/src/acpi/: handler.rs  mod.rs
kernel/src/driver/keyboard/: mod.rs  object.rs  ps2.rs  scancode_processing.rs
kernel/src/drivers/: dma.rs  mod.rs
kernel/src/drivers/net/: mod.rs
kernel/src/drivers/pci/: access.rs  device.rs  mod.rs
kernel/src/drivers/virtio/: block.rs  hal.rs
kernel/src/drm/: abi.rs  allocation.rs  buffer_handlers.rs  card.rs  client.rs  client_handlers.rs  configure.rs  display_handlers.rs  events.rs  framebuffer.rs  fs.rs  mod.rs  mode.rs  mode_types.rs  object.rs  prime.rs  state.rs  user.rs
kernel/src/elfloader/: headers.rs  info.rs  load_base.rs  map.rs  mod.rs  segment.rs  util.rs
kernel/src/evdev/: device_info.rs  event_bits.rs  ioctl.rs  mod.rs  object.rs  ps2.rs  queue.rs
kernel/src/filesystem/: absolute_path.rs  block_device.rs  errors.rs  info.rs  misc.rs  mod.rs  object.rs  path.rs  resolve.rs  storage_operator.rs  tests.rs  vfs.rs  vfs_operations.rs  vfs_traits.rs
kernel/src/filesystem/block_device/: cache.rs  initrd.rs
kernel/src/filesystem/cgroupfs/: mod.rs
kernel/src/filesystem/devfs/: mod.rs
kernel/src/filesystem/impls/: fat32.rs  mod.rs  ramfs.rs
kernel/src/filesystem/procfs/: mod.rs  net.rs  pid.rs  root.rs
kernel/src/filesystem/staticfs/: device.rs  directory.rs  file.rs  fs.rs  mod.rs  node.rs  symlink.rs
kernel/src/filesystem/storage_operator/: block.rs  initrd.rs
kernel/src/filesystem/sysfs/: keyboard.rs  mod.rs  mouse.rs
kernel/src/filesystem/tmpfs/: directory.rs  file.rs  fs.rs  mod.rs  state.rs  symlink.rs  variant.rs
kernel/src/graphics/: framebuffer.rs  mod.rs  object.rs  object_config.rs  terminal.rs  tty.rs
kernel/src/graphics/terminal/: font.rs  impls.rs  macros.rs  mod.rs  renderer.rs  state.rs  term_trait.rs
kernel/src/graphics/tty/: ansi_color.rs  misc.rs  mod.rs  processing.rs  text.rs  vte_impl.rs  wallpaper.rs
kernel/src/interrupts/: exception_interrupt.rs  hardware_interrupt.rs  io_apic.rs  mod.rs  pagefault.rs  timer.rs
kernel/src/keyboard/: char_processing.rs  decoding.rs  decoding_task.rs  key_to_escape_sequence.rs  mod.rs  object.rs  ps2.rs  raw_key_processing.rs  scancode_processing.rs  scancode_stream.rs
kernel/src/keyboard/block_device/: initrd.rs
kernel/src/memory/: addrspace.rs  addrspace_mapping.rs  clone.rs  fixed_block_size.rs  fork.rs  heap.rs  manager.rs  mmio.rs  mod.rs  page_table_wrapper.rs  paging.rs  protection.rs  user_safe.rs  utils.rs
kernel/src/misc/: agent_tty_input.rs  aux.rs  auxv.rs  c_types.rs  cpu_core_context.rs  debug_exit.rs  devices.rs  error.rs  fb_object.rs  framebuffer.rs  framebuffer_ioctl.rs  gdt.rs  logging.rs  misc.rs  mod.rs  mouse.rs  others.rs  panic.rs  reboot.rs  serial_print.rs  signal.rs  snapshot.rs  socket.rs  stack_builder.rs  systemd_perf.rs  time.rs  timer.rs  tss.rs  usercopy.rs  utsname.rs
kernel/src/multitasking/: context.rs  memory.rs  mod.rs  process.rs  scheduling.rs  switch.rs  yielding.rs
kernel/src/net/: mod.rs
kernel/src/object/: bpf.rs  config.rs  control.rs  device.rs  error.rs  fs_context.rs  linux_anon.rs  memfd.rs  misc.rs  mod.rs  netlink.rs  open_state.rs  queue_helpers.rs  traits.rs  tty_device.rs
kernel/src/polling/: event.rs  misc.rs  mod.rs  object.rs  poller.rs  ready.rs  registration.rs  wake.rs
kernel/src/process/: execve.rs  fork.rs  group.rs  manager.rs  misc.rs  mod.rs  new.rs  object.rs
kernel/src/signal/: action.rs  misc.rs  mod.rs
kernel/src/smp/: bootstrap.rs  cpu.rs  gs.rs  mod.rs  topology.rs
kernel/src/socket/: accept.rs  bind.rs  connect.rs  control.rs  create.rs  datagram.rs  drop_impl.rs  error.rs  inet.rs  mod.rs  name.rs  object.rs  pair.rs  registry.rs  socket_like.rs  sockopt.rs  state.rs  stream.rs  traits_object.rs  traits_poll.rs  traits_read.rs  traits_stat.rs  traits_write.rs  wake.rs
kernel/src/systemcall/: arg_types.rs  entry.rs  error.rs  handling.rs  implementations.rs  mod.rs  numbers.rs  syscall_no.rs  syscalls_table.rs  table.rs  utils.rs
kernel/src/task/: executor.rs  mod.rs  spawner.rs  task.rs  waker.rs
kernel/src/terminal/: color.rs  impls.rs  line_discipline.rs  linux_kd.rs  linux_vt.rs  macros.rs  misc.rs  mod.rs  object.rs  object_config.rs  renderer.rs  state.rs  term_trait.rs  termios.rs
kernel/src/thread/: clone.rs  future.rs  manager.rs  misc.rs  mod.rs  scheduling.rs  snapshot.rs  stack.rs  switch.rs  thread.rs  yielding.rs
kernel/src/userspace/: elf_loader.rs
kernel/tests/: filesystem.rs  heap.rs  stack_overflow.rs
(+150 files in other folders)
