[workspace]
resolver = "3"
members = ["seele-syslib","kernel", "rust-test"]
exclude = ["toolchain/rust-seele"]

[package]
name = "seeleos-runner"
version = "0.1.0"
edition = "2024"
build = "misc/build.rs"

[[bin]]
name = "seeleos-runner"
path = "misc/runner.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ovmf-prebuilt = "0.2"

[build-dependencies]
bootloader = { git = "https://github.com/rust-osdev/bootloader", branch = "fix/large-fat16"}
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
