[workspace]
resolver = "3"
members = ["kernel"]
exclude = ["toolchain/rust"]

[package]
name = "seeleos-runner"
version = "0.1.0"
edition = "2024"
build = "misc/build.rs"

[[bin]]
name = "seeleos-runner"
path = "misc/runner.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
ovmf-prebuilt = "0.2"

[build-dependencies]
bootloader = { git = "https://github.com/SeeleOS/bootloader" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[patch."https://github.com/SeeleOS/ext4plus"]
ext4plus = { path = "third_party/ext4plus" }
