[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
ps2-mouse = "0.1"
x86_64 = "0.15.4"
xmas-elf = "0.8.0"
acpi = "6.0.1"
limine = "0.5"
pci_types = "0.10"
virtio-drivers = "0.13.0"
smoltcp = { version = "0.13", default-features = false, features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp"] }
heapless = "0.9"
volatile = "0.6.1"
x86_rtc = "0.1"
x2apic = "0.5"
ext4plus = { path = "../ext4plus", features = ["sync"] }
owo-colors = { version = "4.3", default-features = false }
os-terminal = { git = "https://github.com/SeeleOS/os-terminal", features = ["truetype", "wallpaper"] }
vte = { version = "0.15", default-features = false}
elfloader = { git = "https://github.com/SeeleOS/rust-elfloader" }
spin = "0.10"
paste = "1.0.15"
linked_list_allocator = "0.9.0"
pc-keyboard = "0.7.0"
const-random = "0.1.18"
uart_16550 = "0.6.0"
qemu-exit = "3.0.2"
log = "0.4"
bitflags = "2.9.1"
# You can also access strum_macros exports directly through strum using the "derive" feature
strum = { version = "0.28", default-features = false, features = ["derive"] }
spleen-font = { version = "0.2" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs.git"
rev = "c4bb76929eb115f228720631b4110f827b998653"
default-features = false
features = ["alloc"]

[dependencies.num_enum]
version = "0.7.5"
default-features = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]
[dependencies.conquer-once]
version = "0.2.0"
default-features = false
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
